--- a/.gitignore
+++ b/.gitignore
@@ -118,8 +118,7 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
-.mvn/timing.properties
-.mvn/wrapper/maven-wrapper.jar
+.mvn/**/*
 
 ### Windows ###
 # Windows thumbnail cache files
